day07-品牌属性筛选-综合和价格的升降序排序的逻辑代码

--- a/gshop/public/index.html
+++ b/gshop/public/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Date: 2021-10-18 08:50:14
  * @LastEditors: 高文海
- * @LastEditTime: 2021-10-18 16:20:13
+ * @LastEditTime: 2021-10-29 18:12:48
  * @FilePath: \VueProject\gshop\public\index.html
 -->
 <!DOCTYPE html>
@@ -12,6 +12,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="<%= BASE_URL %>reset.css">
+    <link rel="stylesheet" href="https://at.alicdn.com/t/font_2902537_idxlrak9i3.css">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
